[PORT] l10n_ch_payment_slip to version 9.0 - move files in models and view folders - move description in README.rst - move financial contributors in README.rst - update headers as copyright year was missing in most of them - remove dependency on account_payment as it is now in account - adapt to payment.order -> account.payment model change - replace deprecated Warning by UserError

--- a/l10n_ch_payment_slip/views/account_invoice.xml
+++ b/l10n_ch_payment_slip/views/account_invoice.xml
@@ -14,7 +14,7 @@
       <field name="type">form</field>
       <field name="inherit_id" ref="account.invoice_form"/>
       <field name="arch" type="xml">
-        <field name="tax_line" position="before">
+        <field name="tax_line_ids" position="before">
           <group colspan="4">
           <field name="bvr_reference" colspan="4"/>
           <button type="action"
