--- a/l10n_ch_payment_slip/views/bank.xml
+++ b/l10n_ch_payment_slip/views/bank.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
   <data>
-    <record model="ir.ui.view" id="l10nch_view_res_partner_bank_from_invoice_slip">
+    <record model="ir.ui.view" id="l10n_ch_view_res_partner_bank_from_invoice_slip">
       <field name="name">res.partner_bank.form.l10n_ch</field>
       <field name="model">res.partner.bank</field>
       <field name="inherit_id" ref="base.view_partner_bank_form"/>
       <field name="arch" type="xml">
-        <group name="bank" position="after">
-          <group string="BVR options" attrs="{'invisible': ['|', ('state','not in',['bvr', 'bv']), ('company_id' ,'=', False)]}" >
-            <field name="bvr_adherent_num" attrs="{'invisible': [('state','!=','bvr')]}"/>
+        <xpath expr="//group/field[@name='acc_number']/.." position="after">
+          <group string="BVR options" attrs="{'invisible': [('company_id' ,'=', False)]}" >
+            <field name="bvr_adherent_num"/>
             <field name="print_bank"/>
             <field name="print_account"/>
             <field name="print_partner"/>
           </group>
-        </group>
+        </xpath>
       </field>
     </record>
   </data>
