[PORT] l10n_ch_fds: update views for 9.0

--- a/l10n_ch_fds_postfinance/views/fds_files_import_tobankstatments_wizard_view.xml
+++ b/l10n_ch_fds_postfinance/views/fds_files_import_tobankstatments_wizard_view.xml
@@ -48,6 +48,8 @@
         <field name="value" eval="'ir.actions.act_window,%d'%action_fds_files_import_tobankstatments_wizard" />
         <field name="key">action</field>
         <field name="object" eval="1" />
+        <field name="res_id" eval="0" />
+        <field name="key2">client_action_multi</field>
     </record>
     
 </data>
